# airs-bench

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
airsbench/tasks/rad/: test_task_folder.py
airsbench/tasks/rad/CodeGenerationAPPSPassAt5/: custom_labels.py  evaluate.py  evaluate_prepare.py  metadata.yaml  prepare.py  project_description.md  testing_util.py  utils.py
airsbench/tasks/rad/CodeRetrievalCodeXGlueMRR/: custom_labels.py  evaluate.py  evaluate_prepare.py  metadata.yaml  prepare.py  project_description.md  utils.py
airsbench/tasks/rad/CoreferenceResolutionSuperGLUEWSCAccuracy/: evaluate.py  evaluate_prepare.py  metadata.yaml  prepare.py  project_description.md
airsbench/tasks/rad/CoreferenceResolutionWinograndeAccuracy/: evaluate.py  evaluate_prepare.py  metadata.yaml  prepare.py  project_description.md
airsbench/tasks/rad/CvMolecularPropertyPredictionQm9MeanAbsoluteError/: evaluate.py  evaluate_prepare.py  metadata.yaml  prepare.py  project_description.md
airsbench/tasks/rad/GMolecularPropertyPredictionQm9MeanAbsoluteError/: custom_labels.py  evaluate.py  evaluate_prepare.py  metadata.yaml  prepare.py  project_description.md
airsbench/tasks/rad/GraphRegressionZincMae/: evaluate.py  evaluate_prepare.py  metadata.yaml  prepare.py  project_description.md
airsbench/tasks/rad/MathQuestionAnsweringSVAMPAccuracy/: evaluate.py  evaluate_prepare.py  gold_submission.csv  gold_submission_permuted_1.csv  gold_submission_permuted_2.csv  metadata.yaml  prepare.py  project_description.md
airsbench/tasks/rad/QuestionAnsweringDuoRCAccuracy/: custom_labels.py  evaluate.py  evaluate_prepare.py  metadata.yaml  prepare.py  project_description.md
airsbench/tasks/rad/QuestionAnsweringEli5Rouge1/: custom_labels.py  evaluate.py  evaluate_prepare.py  metadata.yaml  project_description.md
airsbench/tasks/rad/QuestionAnsweringEli5RougeL/: evaluate.py  metadata.yaml  prepare.py  project_description.md
airsbench/tasks/rad/QuestionAnsweringFinqaAccuracy/: evaluate.py  evaluate_prepare.py  metadata.yaml  prepare.py  project_description.md
airsbench/tasks/rad/R2AbsMolecularPropertyPredictionQm9MeanAbsoluteError/: evaluate.py  metadata.yaml  prepare.py  project_description.md
airsbench/tasks/rad/ReadingComprehensionSquadExactMatch/: custom_labels.py  evaluate.py  prepare.py  (+3 more)
datasets/: download_hf_datasets.sh  hf_datasets.csv  prepare_hf_datasets_text.py
notebooks/: create_summary_plots.ipynb
scripts/: converter_rad_mlgym_enhanced.py  generate_dataset.py
(+107 files in other folders)
