[tool.ruff]
line-length = 119
exclude = [
    "*.ipynb",  # Ignore notebooks
    "**/*pb2.py",  # Ignore all protobuf generated Python files
    "**/*pb2_grpc.py",  # and also gRPC files
]
[tool.ruff.lint]
extend-select = [
    "I",
    "W292",  # missing-newline-at-end-of-file
]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.mypy]
python_version = "3.12.9"
namespace_packages = true
incremental = false
# Removed cache_dir to use default caching behavior
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false
allow_redefinition = true
disallow_untyped_calls = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
strict_optional = true
strict_equality = true
explicit_package_bases = true
follow_imports = "skip"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "mpl_toolkits.*",
    "gym.*",
    "pytest_mock.*",
    "numpy.*",
    "tree.*",
    "pytest.*",
    "IPython.*",
    "tensorboardX.*",
    "scipy.*",
    "hydra.*",
    "omegaconf.*",
]
ignore_missing_imports = true

[tool.flake8]
select = ["A","B","C","D","E","F","G","I","N","T","W"]
exclude = [
    ".tox",
    ".git",
    "__pycache__",
    "build",
    "dist",
    "proto/*",
    "*.pyc",
    "*.egg-info",
    ".cache",
    ".eggs",
]
max-line-length = 115
max-cognitive-complexity = 18
import-order-style = "google"
doctests = true
docstring-convention = "google"

ignore = [
    "A002",  # Argument shadowing a Python builtin.
    "A003",  # Class attribute shadowing a Python builtin.
    "D107",  # Do not require docstrings for __init__.
    "E266",  # Do not require block comments to only have a single leading #.
    "E731",  # Do not assign a lambda expression, use a def.
    "W503",  # Line break before binary operator (not compatible with black).
    "B017",  # assertRaises(Exception): or pytest.raises(Exception) should be considered evil.
    "E203",  # black and flake8 disagree on whitespace before ':'.
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["airsbench.*"]

[project]
name = "airsbench"
readme = "README.md"
description = ""
dynamic = ["version", "dependencies"]
license = { file = "LICENSE" }
requires-python = ">=3.12"